<resources>
    <string name="app_name">AMRO</string>
    <string name="menu_title">Menu</string>
    <string name="user_profile_title">User Profile</string>
    <string name="details">Details</string>
    <string name="back">Back</string>
    <string name="retry">Retry</string>
    <string name="rating">Rating</string>
    <string name="votes">votes</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="runtime">Runtime</string>
    <string name="minutes">minutes</string>
    <string name="release_date">Release Date</string>
    <string name="status">Status</string>
    <string name="view_on_imdb">View on imdb</string>
    <string name="genre">Genre</string>
    <string name="all">All</string>
    <string name="asc">Asc</string>
    <string name="des">Des</string>
    <string name="error_movie_id_invalid">Invalid Movie Id</string>
    <string name="error_loading_movie_details">Unable to load movie details</string>
    <string name="network_error_loading_movies">Unable to load trending movies. Please check your connection.</string>
    <string name="error_loading_trending_movies">No trending movies found</string>
    <string name="missing_api_key">Missing TMDB API key. Set TMDB_API_KEY in local.properties.</string>
    <string name="trending_movies_this_week">Trending movies this week</string>
    <string name="open_drawer">Open drawer</string>
    <string name="loading">Loading</string>
</resources>